--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@
 # is used in the bar {} block below.
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 8
+font pango:Ubuntu Mono 11
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
@@ -28,17 +28,23 @@ font pango:DejaVu Sans Mono 8
 #set $left j
 #set $right semicolon
 
+# swapped around in xmodmap
+set $kCtrl Mod1
+set $kWin Mod4
+set $kAlt Control
+set $kAltGr Mod5
+
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod4
 
 # start a terminal
-bindsym Mod1+Return exec terminator
+bindsym $kAlt+Return exec terminator
+bindsym $kAltGr+Return exec terminator
+bindsym $kAltGr+y exec dmenu_run
 
 # kill focused window
-bindsym Mod1+w kill
+bindsym $kAltGr+w kill
 
-# start dmenu (a program launcher)
-bindsym Mod1+y exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -102,29 +108,29 @@ bindsym Mod4+f fullscreen
 #bindsym Mod1+minus scratchpad show
 
 # switch to workspace
-bindsym Mod1+a workspace 1
-bindsym Mod1+r workspace 2
-bindsym Mod1+s workspace 3
-bindsym Mod1+t workspace 4
-bindsym Mod1+n workspace 5
-bindsym Mod1+e workspace 6
-bindsym Mod1+i workspace 7
-bindsym Mod1+o workspace 8
+bindsym $kAltGr+a workspace 1
+bindsym $kAltGr+r workspace 2
+bindsym $kAltGr+s workspace 3
+bindsym $kAltGr+t workspace 4
+bindsym $kAltGr+n workspace 5
+bindsym $kAltGr+e workspace 6
+bindsym $kAltGr+i workspace 7
+bindsym $kAltGr+o workspace 8
 
 # move focused container to workspace
-bindsym Mod1+Shift+a move container to workspace 1
-bindsym Mod1+Shift+r move container to workspace 2
-bindsym Mod1+Shift+s move container to workspace 3
-bindsym Mod1+Shift+t move container to workspace 4
-bindsym Mod1+Shift+n move container to workspace 5
-bindsym Mod1+Shift+e move container to workspace 6
-bindsym Mod1+Shift+i move container to workspace 7
-bindsym Mod1+Shift+o move container to workspace 8
+bindsym $kAltGr+Shift+a move container to workspace 1
+bindsym $kAltGr+Shift+r move container to workspace 2
+bindsym $kAltGr+Shift+s move container to workspace 3
+bindsym $kAltGr+Shift+t move container to workspace 4
+bindsym $kAltGr+Shift+n move container to workspace 5
+bindsym $kAltGr+Shift+e move container to workspace 6
+bindsym $kAltGr+Shift+i move container to workspace 7
+bindsym $kAltGr+Shift+o move container to workspace 8
 
 # reload the configuration file
-bindsym Mod1+q reload
+bindsym $kCtrl+q reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym Mod1+Shift+q restart
+bindsym $kCtrl+Shift+q restart
 # exit i3 (logs you out of your X session)
 bindsym Mod4+Shift+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
@@ -172,4 +178,6 @@ bar {
 #######################################################################
 #exec i3-config-wizard
 
-exec ~/bin/startup
+exec redshift -l manual 51.38:-2.36
+exec xmodmap ~/.Xmodmap
+exec setxkbmap gb -variant colemak
