--- a/config/sakura/sakura.conf
+++ b/config/sakura/sakura.conf
@@ -1,21 +1,17 @@
 [sakura]
-forecolor=#333333
-backcolor=#FCFCFC
 opacity_level=99
-background=none
-font=Droid Sans Mono 10
+font=Droid Sans Mono 13
 show_always_first_tab=No
-scrollbar=true
+scrollbar=false
 resize_grip=false
 closebutton=true
 tabs_on_bottom=false
 less_questions=false
-audible_bell=No
+audible_bell=Yes
 visible_bell=No
 blinking_cursor=No
-cursor_type=VTE_CURSOR_SHAPE_BLOCK
+cursor_type=0
 word_chars=-A-Za-z0-9,./?%&#_~
-palette=linux
 add_tab_accelerator=5
 del_tab_accelerator=5
 switch_tab_accelerator=8
@@ -35,29 +31,27 @@ scrollbar_key=S
 set_tab_name_key=N
 fullscreen_key=F11
 icon_file=terminal-tango.svg
-colorset1_fore=#333333
-colorset1_back=#eeeeee
-colorset1_opacity=99
+colorset1_fore=rgb(192,192,192)
+colorset1_back=rgba(0,43,54,0.98999999999999999)
 colorset1_key=F1
-colorset2_fore=#c0c0c0
-colorset2_back=#000000
-colorset2_opacity=99
+colorset2_fore=rgb(192,192,192)
+colorset2_back=rgb(0,0,0)
 colorset2_key=F2
-colorset3_fore=#c0c0c0
-colorset3_back=#000000
-colorset3_opacity=99
+colorset3_fore=rgb(192,192,192)
+colorset3_back=rgb(0,0,0)
 colorset3_key=F3
-colorset4_fore=#c0c0c0
-colorset4_back=#000000
-colorset4_opacity=99
+colorset4_fore=rgb(192,192,192)
+colorset4_back=rgb(0,0,0)
 colorset4_key=F4
-colorset5_fore=#c0c0c0
-colorset5_back=#000000
-colorset5_opacity=99
+colorset5_fore=rgb(192,192,192)
+colorset5_back=rgb(0,0,0)
 colorset5_key=F5
-colorset6_fore=#c0c0c0
-colorset6_back=#000000
-colorset6_opacity=99
+colorset6_fore=rgb(192,192,192)
+colorset6_back=rgb(0,0,0)
 colorset6_key=F6
-set_colorset_accelerator=5
 last_colorset=1
+set_colorset_accelerator=5
+background=none
+palette=solarized_dark
+forecolor=#c0c0c0
+backcolor=#000000
