--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@
 # is used in the bar {} block below.
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:Ubuntu Mono 11
+font pango:Ubuntu Mono 13
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
@@ -167,6 +167,7 @@ mode "resize" {
 bar {
         status_command i3status --config ~/.i3/i3status.conf
         position top
+        font pango:DejaVu Sans Mono, Icons 8
 }
 
 #######################################################################
