--- a/config/sakura/sakura.conf
+++ b/config/sakura/sakura.conf
@@ -55,3 +55,15 @@ background=none
 palette=solarized_dark
 forecolor=#c0c0c0
 backcolor=#000000
+colorset1_curs=rgb(255,255,255)
+colorset2_curs=rgb(255,255,255)
+colorset3_curs=rgb(255,255,255)
+colorset4_curs=rgb(255,255,255)
+colorset5_curs=rgb(255,255,255)
+colorset6_curs=rgb(255,255,255)
+urgent_bell=Yes
+allow_bold=Yes
+disable_numbered_tabswitch=false
+scroll_lines=4096
+increase_font_size_key=plus
+decrease_font_size_key=minus
